# HUckberry-Final

./: README.md
Commerce-Core/: package-lock.json  package.json  pyproject.toml  vite.config.ts
Commerce-Core/backend/: auth.py  database.py  main.py  models.py  schemas.py
Commerce-Core/frontend/: admin-login.html  admin.html  index.html  script.js  shop.html  style.css
Commerce-Core/server/: index.ts
